--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <h1>Índice</h1>
+<br>
+    <a href="/mi_primer_formulario.html">Formulario de Empleo</a>
 </body>
 </html>
