--- a/CV (Proyecto 2)/Aday Lorenzo CV.html
+++ b/CV (Proyecto 2)/Aday Lorenzo CV.html
@@ -37,5 +37,6 @@
             <li><b>Actualmente cursando:</b> Grado Superior de ASIR. IES Puerto de la Cruz. <a href="https://www3.gobiernodecanarias.org/medusa/edublog/iespuertodelacruztelesforobravo/">Página del centro.</a></li>
         </ul>
    </p>
+   <a href="/index.html">Volver al Index principal</a>
 </body>
 </html>
