--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <h1>Índice</h1>
 <br>
-    <a href="/mi_primer_formulario.html">Formulario de Empleo</a>
+    <a href="/proyecto formularios/mi_primer_formulario.html">Formulario de Empleo</a>
+    <br>
+    <a href="/CV (Proyecto 2)/Aday Lorenzo CV.html"></a>
+    <br>
+    <a href="/Proyecto 3 (Tablas)/Index.html"></a>
 </body>
 </html>
