--- a/proyecto formularios/mi_primer_formulario.html
+++ b/proyecto formularios/mi_primer_formulario.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>Formulario Empleo</h1>
+    <a href="/index.html">Volver al Index principal</a>
 
     <form action="" method="post">
         <fieldset>
