--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <br>
     <a href="/proyecto formularios/mi_primer_formulario.html">Formulario de Empleo</a>
     <br>
-    <a href="/CV (Proyecto 2)/Aday Lorenzo CV.html"></a>
+    <a href="/CV (Proyecto 2)/Aday Lorenzo CV.html">Currículum</a>
     <br>
-    <a href="/Proyecto 3 (Tablas)/Index.html"></a>
+    <a href="/Proyecto 3 (Tablas)/Index.html">Tabla de alimentos - Imágenes recursivas</a>
 </body>
 </html>
