--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>Índice</h1>
 <br>
-    
+    <a href="/CV (Proyecto 2)/Aday Lorenzo CV.html">Currículum</a>
+    <br>
+    <a href="/proyecto formularios/Formulario.html"></a>
     <br>
     <a href="/Proyecto 3 (Tablas)/Index.html">Tabla de alimentos - Imágenes recursivas</a>
 </body>
