--- a/proyecto formularios/Formulario.html
+++ b/proyecto formularios/Formulario.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>Formulario Empleo</h1>
+    <a href="/index.html">Volver al index principal</a>
     <form action="" method="post">
         <fieldset style="background-color: rgba(0, 255, 255, 0.507);">
             <legend>Datos personales</legend>
