--- a/proyecto formularios/Index.html
+++ b/proyecto formularios/Index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"  content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Aday Lorenzo">
     <title>trabajoaday</title>
     <style> label {color: rgb(14, 141, 78)};</style>
     
 </head>
 <body>
     <h1>Formulario Empleo</h1>
-    <a href="/index.html">Volver al index principal</a>
-    <form action="" method="post">
+    <form action="/recorrer/recorrer.php" method="post">
         <fieldset style="background-color: rgba(0, 255, 255, 0.507);">
             <legend>Datos personales</legend>
         <label for="">DNI: <input type="text" name="dni" id="" required pattern="[0-9]{8}[a-zA-Z]" maxlength="9"></label>
