Quitados los php y corregidas rutas y enlaces

--- a/proyecto formularios/Index.html
+++ b/proyecto formularios/Index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <h1>Formulario Empleo</h1>
+    <a href="/index.html">Volver al Index principal</a>
     <form action="/recorrer/recorrer.php" method="post">
         <fieldset style="background-color: rgba(0, 255, 255, 0.507);">
             <legend>Datos personales</legend>
