--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
     <h1>Índice</h1>
 <br>
-    <a href="/CV (Proyecto 2)/Aday Lorenzo CV.html">Currículum</a>
+    <a href="CV (Proyecto 2)/Aday Lorenzo CV.html">Currículum</a>
     <br>
-    <a href="/proyecto formularios/Index.html">Formulario</a>
+    <a href="proyecto formularios/Index.html">Formulario</a>
     <br>
-    <a href="/Proyecto 3 (Tablas)/Index.html">Tabla de alimentos - Imágenes recursivas</a>
+    <a href="Proyecto 3 (Tablas)/Index.html">Tabla de alimentos - Imágenes recursivas</a>
+    <br>
+    <a href="Aday_Lorenzo/Index.html">Examen LND</a>
 </body>
 </html>
