--- a/Aday_Lorenzo/Index.html
+++ b/Aday_Lorenzo/Index.html
@@ -46,6 +46,8 @@
     </tr>
 </table>
 <footer style="text-align: center;">Aday Lorenzo Martín &#x1F609 </footer>
+<br>
+<a href="../index.html">Volver al index principal</a>
 
     
 </body>
