alineado el enlace al index principal

--- a/Aday_Lorenzo/Index.html
+++ b/Aday_Lorenzo/Index.html
@@ -47,7 +47,7 @@
 </table>
 <footer style="text-align: center;">Aday Lorenzo Martín &#x1F609 </footer>
 <br>
-<a href="../index.html">Volver al index principal</a>
+<a href="../index.html" style="text-align: center;">Volver al index principal</a>
 
     
 </body>
