--- a/Horario interactivo/index.html
+++ b/Horario interactivo/index.html
@@ -74,5 +74,7 @@
         </p>
         <input type="button" value="Enviar Horario" />
     </form>
+    <br>
+    <a href="../index.html">Volver al Index principal</a>
 </body>
 </html>
