--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
     <a href="Proyecto 3 (Tablas)/Index.html">Tabla de alimentos - Imágenes recursivas</a>
     <br>
     <a href="Aday_Lorenzo/Index.html">Examen LND</a>
+    <br>
+    <a href="Horario interactivo/index.html">Horario interactivo</a>
 </body>
 </html>
