Diseño web añadido correctamente

--- a/Maquetado absoluto/index.html
+++ b/Maquetado absoluto/index.html
@@ -58,14 +58,15 @@
         <footer>(cc) Aday.</footer>
 
 
-
-
-
-
-
-
-
-
     </div>
+
+<br>
+<a href="../index.html">Volver al Index principal</a>
+
+
+
+
+
+    
 </body>
 </html>
