--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
     <a href="Aday_Lorenzo/Index.html">Examen LND</a>
     <br>
     <a href="Horario interactivo/index.html">Horario interactivo</a>
+    <br>
+    <a href="Maquetado absoluto/index.html">Diseño Web (Maquetado)</a>
 </body>
 </html>
