--- a/Maquetado absoluto/index.html
+++ b/Maquetado absoluto/index.html
@@ -61,7 +61,8 @@
     </div>
 
 <br>
-<a href="../index.html">Volver al Index principal</a>
+
+<footer><a href="../index.html">Volver al Index principal</a></footer>
 
 
 
