arreglado de vd

--- a/Maquetado absoluto/index.html
+++ b/Maquetado absoluto/index.html
@@ -62,7 +62,7 @@
 
 <br>
 
-<footer><a href="../index.html">Volver al Index principal</a></footer>
+<footer class="enlace"><a href="../index.html">Volver al Index principal</a></footer>
 
 
 
