probando con div

--- a/Maquetado absoluto/index.html
+++ b/Maquetado absoluto/index.html
@@ -62,7 +62,7 @@
 
 <br>
 
-<footer class="enlace"><a href="../index.html">Volver al Index principal</a></footer>
+<div class="enlace"><a href="../index.html">Volver al Index principal</a></div>
 
 
 
