enlaces de maquetacion liquida configurados

--- a/Maquetación líquida/index.html
+++ b/Maquetación líquida/index.html
@@ -50,6 +50,8 @@
     </div>
     <div id="piedepagina">
         <address><a href="adaylorenzo01@gmail.com">adaylorenzo01@gmail.com</a></address>
+        <br><br>
+        <a href="../index.html">Volver al Index principal</a>
     </div>
 </body>
 </html>
