--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
     <a href="Horario interactivo/index.html">Horario interactivo</a>
     <br>
     <a href="Maquetado absoluto/index.html">Diseño Web (Maquetado)</a>
+    <br>
+    <a href="Maquetación líquida/index.html">Página Zenitsu</a>
 </body>
 </html>
