nuevo diseño añadido sin volver al index

--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
     <a href="Maquetado absoluto/index.html">Diseño Web (Maquetado)</a>
     <br>
     <a href="Maquetación líquida/index.html">Página Zenitsu</a>
+    <br>
+    <a href="maquetar I/index.html">Diseño Web desde 0</a>
 </body>
 </html>
