Nuevo diseño añadido 100%

--- a/maquetar I/index.html
+++ b/maquetar I/index.html
@@ -61,7 +61,8 @@
         <p>Muy contenta por la diversidad de opciones para escoger.</p>
     </div>
 
-
+    
+    <a href="../index.html" id="volver">Volver al index principal</a>
 
 
 
