--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
     <a href="Maquetación líquida/index.html">Página Zenitsu</a>
     <br>
     <a href="maquetar I/index.html">Diseño Web desde 0</a>
+    <br>
+    <a type="application/rss+xml" href="/rss/rss.xml"><img src="" alt=""></a>
 </body>
 </html>
