--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     <br>
     <a href="maquetar I/index.html">Diseño Web desde 0</a>
     <br>
-    <a type="application/rss+xml" href="./rss/rss.xml"><img src="./rss/rss_icono.png" alt="rss_icono"></a>
+    <img src="./rss/rss_icono.png" alt="rss_icono">
 </body>
 </html>
