error vuelta al index principal corregido

--- a/Proyecto 3 (Tablas)/Index.html
+++ b/Proyecto 3 (Tablas)/Index.html
@@ -12,6 +12,6 @@
         <li><a href="pag/tabla.html">Tabla de alimentos.</a></li>    
         <li><a href="pag/misfiguras.html">Imágenes recursivas.</a></li>
     </ul>
-    <a href="/index.html">Volver al Index principal</a>
+    <a href="../index.html">Volver al Index principal</a>
 </body>
 </html>
