--- a/index.html
+++ b/index.html
@@ -1,34 +1,90 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ROM de Aday</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
-      background-color: #f4f4f4;
-    }
-    h1 {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f9f9f9;
       color: #333;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
     }
+
+    header {
+      padding: 2rem 1rem 1rem;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 0.5rem;
+    }
+
     p {
-      color: #666;
+      font-size: 1.2rem;
+      margin: 0.5rem 0 2rem;
+    }
+
+    .contact-links {
+      margin-top: 2rem;
+      display: flex;
+      gap: 1.5rem;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .contact-links a {
+      text-decoration: none;
+      color: white;
+      background-color: #0077ff;
+      padding: 0.75rem 1.5rem;
+      border-radius: 10px;
+      font-weight: bold;
+      transition: background-color 0.3s;
+    }
+
+    .contact-links a:hover {
+      background-color: #005fcc;
+    }
+
+    footer {
+      margin-top: 4rem;
+      font-size: 0.9rem;
+      color: #777;
     }
   </style>
 </head>
 <body>
-  <h1>ROM de Aday</h1>
-  <p>¿Tienes un problema técnico? ¡Habla con Chaty!</p>
-  <!-- Aquí se insertará el widget de Chatbase -->
-  <iframe
+  <header>
+    <h1>ROM de Aday</h1>
+    <p>¿Tienes un problema técnico? ¡Habla con Chaty!</p>
+  </header>
+
+  <!-- Chatbase widget -->
+    <iframe
   src="https://www.chatbase.co/chatbot-iframe/dbFZEoZuT2sGfc8E-JzA0"
   width="100%"
   style="height: 100%; min-height: 700px"
   frameborder="0"
-></iframe>
-  <!-- Pega el código del widget de Chatbase aquí -->
+  ></iframe>
+
+  <div class="contact-links">
+    <a href="https://wa.me/TUNUMERO" target="_blank">📱 WhatsApp</a>
+    <a href="mailto:tucorreo@example.com">📧 Email</a>
+    <a href="https://instagram.com/tuinstagram" target="_blank">📸 Instagram</a>
+  </div>
+
+  <footer>
+    <p>Creado con magia digital por Aday y Chaty ✨</p>
+  </footer>
 </body>
 </html>
+
