--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 </head>
 <body class="bg-gradient-to-br from-blue-100 via-white to-purple-100 text-gray-800 font-sans flex flex-col items-center justify-center min-h-screen px-4">
   <header class="text-center mt-10 animate-fadeIn">
+    <img src="romdeaday.png" alt="Logo de ROM de Aday" class="w-32 mx-auto mb-4 animate-bounceIn">
     <h1 class="text-5xl font-bold mb-4 animate-bounceIn">ROM de Aday</h1>
     <p class="text-xl">¿Tienes un problema técnico? ¡Habla con Chaty!</p>
   </header>
@@ -56,9 +57,33 @@
   </div>
 
   <div class="flex gap-4 flex-wrap justify-center mt-10 animate-fadeIn">
-    <a href="https://wa.me/TUNUMERO" target="_blank" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-xl shadow-lg transition-all">📱 WhatsApp</a>
-    <a href="mailto:tucorreo@example.com" class="bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded-xl shadow-lg transition-all">📧 Email</a>
+    <button onclick="document.getElementById('contact-form').classList.toggle('hidden')" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-xl shadow-lg transition-all">📬 Contactar por Email</button>
+    <!--
     <a href="https://instagram.com/tuinstagram" target="_blank" class="bg-pink-500 hover:bg-pink-600 text-white py-2 px-4 rounded-xl shadow-lg transition-all">📸 Instagram</a>
+    <a href="https://tiktok.com/@tutiktok" target="_blank" class="bg-black hover:bg-gray-800 text-white py-2 px-4 rounded-xl shadow-lg transition-all">🎵 TikTok</a>
+    -->
+  </div>
+
+  <div id="contact-form" class="hidden mt-6 w-full max-w-md animate-fadeIn">
+    <form action="https://formspree.io/f/mrbpvylb" method="POST" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+      <div class="mb-4">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="name">Nombre</label>
+        <input name="name" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" type="text" placeholder="Tu nombre" required>
+      </div>
+      <div class="mb-4">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="email">Email</label>
+        <input name="email" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" type="email" placeholder="tu@email.com" required>
+      </div>
+      <div class="mb-6">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="message">Mensaje</label>
+        <textarea name="message" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" rows="4" placeholder="Cuéntame qué ocurre..." required></textarea>
+      </div>
+      <div class="flex items-center justify-between">
+        <button class="bg-purple-500 hover:bg-purple-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
+          Enviar
+        </button>
+      </div>
+    </form>
   </div>
 
   <footer class="mt-20 text-sm text-gray-500 animate-fadeIn">
